  o Major features:
    - Add server-side support for "reverse" DNS lookups (using PTR
      records so clients can determine the canonical hostname for a given
      IPv4 address).  This has been specified for a long time, but was
      previously never implemented.  This is only supported by eventdns;
      servers now announce in their descriptors whether they support
      eventdns.

  o Minor features:
    - Check for name servers (like Earthlink's) that hijack failing DNS
      requests and replace the 'no such server' answer with a "helpful"
      redirect to an advertising-driven search portal.  [Resolves bug 330.]
    - When asked to resolve a hostname, don't use non-exit servers unless
      requested to do so.  This allows servers with broken DNS be useful to
      the network.

  o Security Fixes, minor
    - If a client asked for a server by name, and we didn't have a
      descriptor for a named server with that name, we might return an old
      one.

  o Minor Bugfixes
    - Small performance improvements on parsing descriptors (x2).
    - Major performance descriptor on inserting descriptors; change
      algorithm from O(n^2) to O(n).
    - Make the common memory allocation path faster on machines where
      malloc(0) returns a pointer.
    - Fix a debug log message in eventdns to say "X resolved to Y"
      instead of "X resolved to X".

  o Documentation
    - Documented (and renamed) ServerDNSSearchDomains and
      ServerDNSResolvConfFile options.

Changes in version 0.1.2.1-alpha - 2006-08-27
  o Major features:
    - Add "eventdns" async dns library from Adam Langley, tweaked to
      build on OSX and Windows. Only enabled if you pass the
      --enable-eventdns argument to configure.
    - Allow servers with no hostname or IP address to learn their
      IP address by asking the directory authorities. This code only
      kicks in when you would normally have exited with a "no address"